--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eosjs-api",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Application programming interface to EOS blockchain nodes.",
   "scripts": {
     "test": "mocha src/**/*.test.js",
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "camel-case": "^3.0.0",
-    "eosjson": "eosjs/json",
+    "eosjs-json": "^1.0.2",
     "isomorphic-fetch": "^2.2.1"
   }
 }
