Change license to MIT

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "API"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/EOSIO/eosjs-api/issues"
   },
