--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "eosjs-api",
   "version": "1.2.5",
   "description": "Application programming interface to EOS blockchain nodes.",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha src/**/*.test.js",
     "coverage": "istanbul cover _mocha -- -R spec src/**/*.test.js",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "build": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,9 @@
   },
   "homepage": "https://github.com/EOSIO/eosjs-api#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.0",
     "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
@@ -32,5 +38,10 @@
     "camel-case": "^3.0.0",
     "eosjs-json": "^1.4.0",
     "isomorphic-fetch": "^2.2.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
