--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bluebird": "^3.5.0",
     "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
+    "jsdoc-to-markdown": "^4.0.1",
     "mocha": "^3.4.2"
   },
   "dependencies": {
