--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha src/**/*.test.js",
+    "test_lib": "mocha --use_strict lib/*.test.js",
     "coverage": "istanbul cover _mocha -- -R spec src/**/*.test.js",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "build": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
-    "prepublish": "npm run build && npm run docs",
-    "docs": "jsdoc2md src/exported-helpers.js src/process-args.js > docs/index.md"
+    "build": "babel src --out-dir lib",
+    "build_browser": "npm run build && mkdir -p dist && browserify -o dist/eos-api.js -s EosApi lib/index.js",
+    "build_browser_test": "npm run build && mkdir -p dist && browserify -o dist/test.js lib/*.test.js",
+    "docs": "jsdoc2md src/exported-helpers.js src/process-args.js > docs/index.md",
+    "prepublishOnly": "npm run build_browser && npm run test_lib && npm run docs"
   },
   "repository": {
     "type": "git",
@@ -39,6 +42,7 @@
   "dependencies": {
     "camel-case": "^3.0.0",
     "eosjs-json": "^2.0.3",
+    "is-browser": "^2.0.1",
     "isomorphic-fetch": "^2.2.1"
   },
   "babel": {
