Integrated and removed eosjs-json dependency. https://github.com/EOSIO/eosjs-json/issues/6

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test_lib": "mocha --use_strict lib/*.test.js",
     "coverage": "istanbul cover _mocha -- -R spec src/**/*.test.js",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "build": "babel src --out-dir lib",
+    "build": "babel --copy-files src --out-dir lib",
     "build_browser": "npm run build && mkdir -p dist && browserify -o dist/eos-api.js -s EosApi lib/index.js",
     "build_browser_test": "npm run build && mkdir -p dist && browserify -o dist/test.js lib/*.test.js",
     "docs": "jsdoc2md src/exported-helpers.js src/process-args.js > docs/index.md",
@@ -41,7 +41,6 @@
   },
   "dependencies": {
     "camel-case": "^3.0.0",
-    "eosjs-json": "^4.0.1",
     "is-browser": "^2.0.1",
     "isomorphic-fetch": "^2.2.1"
   },
